Menu button mobile view fixed

--- a/src/assets/css/shop.css
+++ b/src/assets/css/shop.css
@@ -1,11 +1,11 @@
-button span {
+.buttonLoad span {
 	cursor: pointer;
 	display: inline-block;
 	position: relative;
 	transition: 0.5s;
 }
 
-button span:after {
+.buttonLoad span:after {
 	content: "\00bb";
 	position: absolute;
 	opacity: 0;
@@ -14,22 +14,22 @@ button span:after {
 	transition: 0.5s;
 }
 
-button:hover span {
+.buttonLoad:hover span {
 	padding-right: 25px;
 }
 
-button:hover span:after {
+.buttonLoad:hover span:after {
 	opacity: 1;
 	right: 0;
 }
-button span {
+.buttonLoad span {
 	cursor: pointer;
 	display: inline-block;
 	position: relative;
 	transition: 0.5s;
 }
 
-button span:after {
+.buttonLoad span:after {
 	content: "\00bb";
 	position: absolute;
 	opacity: 0;
@@ -38,11 +38,11 @@ button span:after {
 	transition: 0.5s;
 }
 
-button:hover span {
+.buttonLoad:hover span {
 	padding-right: 25px;
 }
 
-button:hover span:after {
+.buttonLoad:hover span:after {
 	opacity: 1;
 	right: 0;
 }
